--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
     "armadietto": "bin/armadietto.js"
   },
   "main": "./lib/armadietto.js",
+  "files": [
+    "bin/armadietto.js",
+    "bin/www",
+    "bin/conf.modular.json",
+    "bin/conf.monolithic.json",
+    "bin/dev-conf.json",
+    "lib"
+  ],
   "dependencies": {
     "@aws-sdk/client-s3": "^3.523.0",
     "@aws-sdk/lib-storage": "^3.525.1",
